@@ -1,4 +1,8 @@
-$Id: ChangeLog,v 1.111 2005/01/26 17:24:13 h_oudejans Exp $
+$Id: ChangeLog,v 1.112 2005/01/31 21:00:19 h_oudejans Exp $
+
+2004-02-03 Herman Oudejans <hn.oudejans@quicknet.nl>
+	* Fixed updating the popup menu's for mapper and ips
+	* Restricted the history to 25 items (hardcoded for now)
 
 2004-01-31 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* Fix IPS and mapper support
